--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Junseong Park
-position: Integrated MS/Ph.D
-affiliation: Korea Advanced Institute of Science and Technology(KAIST)
+position: Integrated MS/PhD
+affiliation: KAIST
 email: pkjnsg38@kaist.ac.kr
 
 # Search Engine Optimization (SEO)
